# blobfish

./: .gitignore  LICENSE  README.md  run-blobfish.sh
agents/: README.md
agents/cchuter/: agent.env
docs/superpowers/plans/: 2026-03-31-context-compression-state.md
docs/superpowers/specs/: 2026-03-31-tool-input-mutation-design.md
harbor/: README.md  pyproject.toml
harbor/src/blobfish_harbor/: __init__.py  agent.py
harbor/src/blobfish_harbor/templates/: claude-project-minimax-m25.md  claude-project-minimax.md  claude-project-qwen.md  install-claude.sh.j2  install-codex.sh.j2  prompt-minimax-m25.md.j2  prompt-qwen.md.j2  prompt-slim.md.j2  prompt.md.j2
harbor/src/blobfish_harbor/templates/hooks/: hook-runner.sh  hook_common.pl  hook_common.py  post-tool-hook.pl  post-tool-hook.py  pre-tool-hook.pl  pre-tool-hook.py  session-start-hook.sh  stop-hook.pl  stop-hook.py  task-completed-hook.pl
harbor/src/blobfish_harbor/templates/project-rules/: constraint-first-debugging.md  deadline-aware-delivery.md
harbor/src/blobfish_harbor/templates/project-skills/constraint-first-debugging/: SKILL.md
harbor/src/blobfish_harbor/templates/project-skills/deadline-aware-delivery/: SKILL.md
scripts/: check-token-usage.py  hf-upload.py  monitor_harbor_job.py  new-agent.sh  prepare-submission.py  run-blobfish.sh  run-terminal-bench.sh  submit-hf-leaderboard.sh  submit-leaderboard.sh  summarize-trial.py
scripts/autoresearch/: autoresearch.py  config.yaml  research_log.py  researcher.py  trajectory.py  trial.py
scripts/autoresearch/prompts/: evaluate.md  propose.md
