[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blobfish-harbor"
version = "0.1.0"
description = "Blobfish Harbor adapter for Terminal-Bench runs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "harbor>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blobfish_harbor"]

